--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,1 +1,22 @@
+name: Docker
 
+on:
+  workflow_call: 
+
+jobs:
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Docker Login
+      # You may pin to the exact commit or the version.
+      # uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+      uses: docker/login-action@v3.0.0
+      with:
+        username: icl00ud
+        password: await
+
+    - name: Setup Docker Build
+      uses: docker/setup-buildx-action@v3.0.0
