--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Setup Docker Build
+      uses: docker/setup-buildx-action@v3.0.0
+      
     - name: Docker Login
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
@@ -18,5 +21,17 @@ jobs:
         username: icl00ud
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
 
-    - name: Setup Docker Build
-      uses: docker/setup-buildx-action@v3.0.0
+    - name: Build and push Docker images
+      # You may pin to the exact commit or the version.
+      # uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56
+      uses: docker/build-push-action@v5.1.0
+      with:
+        # Build's context is the set of files located in the specified PATH or URL
+        context: .
+        # Path to the Dockerfile
+        file: ./Dockerfile
+        # Push is a shorthand for --output=type=registry
+        push: true
+        # List of tags
+        tags: israelschroeder/go_ci:${{ github.ref_name }}
+          
