--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -4,7 +4,22 @@ on:
   workflow_call: 
 
 jobs:
+  download_image:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
+      - name: Writing step summary
+        run: |
+          echo "Downloading the image!" >> $GITHUB_STEP_SUMMARY
+          echo "Repository: ${{ github.repository }}" >> $GITHUB_STEP_SUMMARY
+          echo "Run id: ${{ github.run_id }}" >> $GITHUB_STEP_SUMMARY
+
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v4.1.1
+        with:
+          name: Go API
+  
   docker:
     runs-on: ubuntu-latest
     steps:
@@ -14,24 +29,16 @@ jobs:
       uses: docker/setup-buildx-action@v3.0.0
       
     - name: Docker Login
-      # You may pin to the exact commit or the version.
-      # uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
       uses: docker/login-action@v3.0.0
       with:
         username: ${{ secrets.USER_DOCKER_HUB }}
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
 
     - name: Build and push Docker images
-      # You may pin to the exact commit or the version.
-      # uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56
       uses: docker/build-push-action@v5.1.0
       with:
-        # Build's context is the set of files located in the specified PATH or URL
         context: .
-        # Path to the Dockerfile
         file: ./Dockerfile
-        # Push is a shorthand for --output=type=registry
         push: true
-        # List of tags
         tags: icl00ud/go_ci:${{ github.ref_name }}
           
