--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -21,6 +21,7 @@ jobs:
           name: Go API
   
   docker:
+    needs: download_image
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
